fixes missing horizontal scroll

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1254,7 +1254,8 @@ li p.header-3 {
 .appWrapper {
   background: #f3f5f6;
   min-height: 100%;
-  overflow-x: scroll;
+  height: 100%;
+  overflow-x: auto;
 }
 
 .available-credits {
